# watsonx-ai-platform-demos

./: .gitignore  README.md
workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/: README.md  ai_service_single_agent.py  ai_service_single_agent_new.py  pyproject.toml
workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/backup/: config.toml_template_old  config_new.toml
workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/examples/: _interactive_chat.py  execute_ai_service_single_agent_locally.py  query_existing_deployment.py
workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/examples/backup/: query_existing_deployment_new.py
workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/schema/backup/: response_new.json
workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/scripts/: build_package_single_agent.py  deploy_single_agent.py
workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/scripts/backup/: build_package_single_agent_new.py  deploy_single_agent_new.py  deploy_single_agent_old.py
workshops/regional_techXchange_2025_05/03_phase3_agents/agents/langgraph_implementation/tests/: debug_request.sh  debug_request_db2_expert.py  debug_request_email_expert.py
workshops/regional_techXchange_2025_06/00_setup/03_frontend_app/: pyproject.toml  readme.md
workshops/regional_techXchange_2025_06/00_setup/03_frontend_app/pages/: 1_Chapter1.py  2_Chapter2.py
(+172 files in other folders)
