[tool.poetry]
name = "03-frontend-app"
version = "0.1.0"
description = ""
authors = ["MaxJ <maximilian.jesch@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = ">=1.43.2,<2.0.0"
requests = ">=2.32.3,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"